# myOceano-libraryV2

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.svelte-kit/: ambient.d.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  indexer.rs  lib.rs  main.rs  parser.rs
src/lib/: tauri.ts  types.ts
src/lib/components/: AppSidebar.svelte  DocumentTree.svelte  DocumentViewer.svelte  SearchCommand.svelte  Toast.svelte  TreeItem.svelte
src/lib/stores/: document.ts  toast.ts
src/routes/: +layout.svelte  +page.svelte
